# gh-grader-preview

./: .gitignore  Cargo.toml  README.md  flake.nix  result
.github/workflows/: release.yml
src/: cli.rs  grader.rs  main.rs  meta.rs  runner.rs
