[package]
name = "gh-grader-preview"
version = "0.4.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.46", features = ["derive"] }
clap_complete = "4.5.57"
clap_derive = "4.5.45"
clap_mangen = "0.2.29"
indicatif = "0.18.0"
regex = "1.11.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
wait-timeout = "0.2.1"

[profile.release]
codegen-units = 1
lto = true
strip = true

