[package]
name = "gh-grader-preview"
version = "0.4.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.51", features = ["derive"] }
clap_complete = "4.5.60"
clap_derive = "4.5.49"
clap_mangen = "0.2.31"
indicatif = "0.18.3"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
wait-timeout = "0.2.1"

[profile.release]
codegen-units = 1
lto = true
strip = true

